@@ -6,7 +6,7 @@ use lib 't';
 use TestLib;
 use POSIX qw/setlocale LC_ALL LC_MESSAGES/;
 
-use Test::More tests => 6 + ($#MAJORS+1)*6;
+use Test::More tests => 7 + ($#MAJORS+1)*6;
 
 foreach my $v (@MAJORS) {
     ok ((deb_installed "postgresql-$v"), "postgresql-$v installed");
@@ -21,6 +21,7 @@ foreach my $v (@MAJORS) {
     ok ((deb_installed "postgresql-server-dev-$v"), "postgresql-server-dev-$v installed");
 }
 
+ok ((deb_installed 'libecpg-dev'), 'libecpg-dev installed');
 ok ((deb_installed 'procps'), 'procps installed');
 
 ok ((deb_installed 'hunspell-en-us'), 'hunspell-en-us installed');
